fix: update test cases